<resources>
    <string name="app_name">Application</string>
    <string name="hint_name">Name</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_category">Category</string>
    <string name="hint_date">Date</string>
    <string name="hint_add_attachment">Add attachment</string>
    <string name="hint_add_notification">Add notification</string>
    <string name="add">Add</string>
    <string name="required">Required*</string>
    <string name="amount_zero">00,00 PLN</string>
    <string name="off">OFF</string>
    <string name="set_limit_first">Set limit first</string>
    <string name="pln">\u0020 PLN</string>
</resources>