<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"


        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:maxLength="30" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAmount"
            android:inputType="number"
            android:digits="0123456789.-"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_amount" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_category">

        <AutoCompleteTextView
            android:id="@+id/filled_exposed_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_calendar_month_24"
            android:drawablePadding="10dp"
            android:focusableInTouchMode="false"
            android:hint="@string/hint_date"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAttachment"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_add_attachment"
            android:focusableInTouchMode="false"
            android:drawableStart="@drawable/ic_baseline_attach_file_24"
            android:drawablePadding="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNotification"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_add_notification"
            android:focusableInTouchMode="false"
            android:drawableStart="@drawable/ic_baseline_notifications_none_24"
            android:drawablePadding="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:text="@string/add"
        />

</LinearLayout>